tests/invalid/duplicate_enum_entry.prsm
// E052: Duplicate enum entry name
enum DuplicateEntries {
    Idle,
    Chase,
    Idle
}
